--- a/styles.css
+++ b/styles.css
@@ -24,11 +24,23 @@ h1 {
 }
 
 p {
-  max-width: 600px;
   margin: 2rem auto;
   font-size: 1.2rem;
+}
+
+.banner-image {
+  display: block;
+  width: 100%;
+  height: auto;
+  max-width: 100VW;
+}
+
+.container.text {
+  width: 60%;
+  max-width: 600px;
   line-height: 1.6;
   background: #232323;
+  margin: 2rem auto;
   padding: 1.5rem 2rem;
   border-radius: 12px;
   box-shadow: 0 2px 12px rgba(0,0,0,0.2);
