--- a/variables.css
+++ b/variables.css
@@ -1,4 +1,6 @@
 body {
+    --color-blue: #1976d2;
+    --color-highcontrast: #ffb347;
     --transluscent-black: rgba(0, 0, 0, 0.8);
     --transluscnet-white: rgba(255, 255, 255, 0.25);
     --blue-purple-gradient: linear-gradient(135deg, #1976d2, #9c27b0);
